sw/.metadata/.plugins/org.eclipse.cdt.ui/app.build.log
23:11:42 **** Incremental Build of configuration Debug for project app ****
make all 
Building file: ../src/helloworld.c
Invoking: ARM v8 gcc compiler
aarch64-none-elf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -I/home/arthur/crypto/sw/cryptolmap/export/cryptolmap/sw/cryptolmap/standalone_psu_cortexa53_0/bspinclude/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:67:
../src/AxiTimer.h:16:1: error: unknown type name 'class'
   16 | class AxiTimer {
      | ^~~~~
../src/AxiTimer.h:16:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   16 | class AxiTimer {
      |                ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:375:26: warning: unused variable 'permuted_image' [-Wunused-variable]
  375 |                 uint8_t* permuted_image = permutation(logmap_perm(dt,x,mu));
      |                          ^~~~~~~~~~~~~~
../src/helloworld.c:244:13: warning: variable 'Value' set but not used [-Wunused-but-set-variable]
  244 |         u32 Value;
      |             ^~~~~
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1

23:11:43 Build Finished (took 921ms)

